hphp/test/quick/debug_backtrace_multiline.php.expectf

Fatal error: Uncaught exception 'Exception' with message '59' in %s/test/quick/debug_backtrace_multiline.php:59
Stack trace:
%A
